package events;

message UUID {
    required uint64 low = 1;
    required uint64 high = 2;
}

enum PeerType {
    Client = 1;
    Server = 2;
}

message HttpStart {

    enum Method {
        GET = 1;
        POST = 2;
        PUT = 3;
        DELETE = 4;
        HEAD = 5;
    }

    required uint64 timestamp = 1;
    required UUID requestId = 2;
    required Method httpMethod = 3;
    required PeerType peerType = 4;
    required string uri = 5;
    required string userAgent = 6;
    required string remoteAddress = 7;

    optional UUID parentRequestId = 8;
    optional UUID applicationId = 9;
    optional uint32 instanceIndex = 10;
}

message HttpStop {
    required uint64 timestamp = 1;
    required UUID requestId = 2;
    required PeerType peerType = 3;
    required uint32 statusCode = 4;
    required uint32 responseSize = 5;
}
